--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="marioball.css">
+	<link rel="stylesheet" type="text/css" href="css/marioball.css">
 	<link rel="icon" href="img/marioball.png">
 	<title>mario ball</title>
 </head>
